correction d'erreurs en lien avec l'irqmapper

--- a/core.ini
+++ b/core.ini
@@ -14,7 +14,7 @@
 # define DEBUG_REG     0x0100 /* trace hardware register access */
 # define DEBUG_WARNING 0x1000 /* trace hardware warning messages */
 #DEBUG          = 0x1111
-DEBUG		= 0x1110
+DEBUG		= 0x0000
 
 #
 # Configuration des paramêtres de base du simulateur  
@@ -89,7 +89,7 @@ HDB_POFF_DELAY  = 30           # nombre de SYSTICK avant arret du disque
 # Configuration de l'horologe interne
 #
 TIMER_CLOCK     = 0xF0         # registre de lecture de la date courante (en ms)
-TIMER_PARAM     = 0xF4         # registre de configuration du TIMER
+TIMER_PARAM     = 0xF4         # registre de configuration du TIMER 11101011
                                # bit 7 : RESET general (=1)
                                # bit 6 : Alarm ON = 1, Alarm OFF = 0 
                                # bit 5 : Declanche la division Hz du Timer (=1)
